--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,102 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.content-wrapper {
+  outline: 3px dotted red;
+  width: 90%;
+}
+
+/* -------------------- Base Header - Footer Styles -------------------- */
+header {
+  display: flex;
+  justify-content: center;
+}
+
+header .content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header nav ul {
+  display: flex;
+  justify-content: space-around;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+footer .social-icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer .social-icons p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* ----- Mobile Styles - Homepage ----- */
+
+/* - Hero Area - */
+
+.hero-area {
+  display: flex;
+  justify-content: center;
+}
+
+/* - Aside - */
+
+aside {
+  display: flex;
+  justify-content: center;
+}
+
+/* - Features - */
+
+.features {
+  display: flex;
+  justify-content: center;
+}
+
+.features .features-items {
+}
+
+/* - Reviews - */
+
+.reviews {
+  display: flex;
+  justify-content: center;
+}
+
+/* ----- About Page ----- */
+
+.mission {
+  display: flex;
+  justify-content: center;
+}
+
+.contact-section {
+  display: flex;
+  justify-content: center;
+}
+
+/* ----- FAQ Page ----- */
+
+.faq {
+  display: flex;
+  justify-content: center;
+}
+
+.faq .content-wrapper {
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -260,4 +356,3 @@ textarea {
     page-break-after: avoid;
   }
 }
-
