Added flex properties to containers

--- a/css/main.css
+++ b/css/main.css
@@ -152,6 +152,9 @@ aside {
 }
 
 .features .features-items {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 /* - Reviews - */
@@ -181,6 +184,9 @@ aside {
 }
 
 .faq .content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 /* ==========================================================================
