Added media queries for desktop

--- a/css/main.css
+++ b/css/main.css
@@ -438,7 +438,7 @@ aside {
     width: 100%;
   }
 
-  /* About Page */
+  /* ================== About Page ================ */
 
   .mission-content {
     display: flex;
@@ -461,7 +461,7 @@ aside {
     align-items: flex-start;
   }
 
-  /* FAQ Page */
+  /* =============== FAQ Page ================== */
 
   .faq .content-wrapper {
     justify-content: space-between;
@@ -478,6 +478,56 @@ aside {
 
 @media only screen and (min-width: 1200px) {
   /* Desktop Styles Here */
+
+  /* General Styles */
+
+  .content-wrapper {
+    max-width: 960px;
+  }
+
+  header {
+    padding: 15px 0;
+  }
+
+  /* Hero */
+  .hero-area h1 {
+    width: 80%;
+  }
+
+  /* Aside */
+  aside .content-wrapper {
+    justify-content: space-around;
+  }
+
+  aside .content-wrapper .form-description,
+  aside .content-wrapper .form {
+    width: 30%;
+  }
+
+  /* Features */
+  .features h2 {
+    width: 90%;
+  }
+
+  .features article {
+    flex-basis: 33%;
+  }
+
+  /* Reviews */
+  .reviews article div {
+    width: 42%;
+  }
+
+  /* =================== About Page =================== */
+  .mission h2,
+  .contact-section .content-wrapper h2 {
+    width: 95%;
+  }
+
+  /* ================== FAQ Page =================== */
+  .faq h2 {
+    width: 100%;
+  }
 }
 
 /* ==========================================================================
